# OdrManager_vtd

JinxC/roadInfos/: .gitignore  CMakeLists.txt  contactPoints.xml  debug.bat  workspace.code-workspace  ~$算法说明.docx  算法说明.docx
JinxC/roadInfos/OdrManager/: OdrManagerLite.hh  OdrReaderXML.hh
JinxC/roadInfos/OdrManager/BaseNodes/: OdrLane.hh  OdrRoadHeader.hh
JinxC/roadInfos/OdrManagerm/: OdrManager.hh
JinxC/roadInfos/OdrManagerm/BaseNodes/: OdrGenericNode.hh
JinxC/roadInfos/examples/: CMakeLists.txt  getLaneInfo.cpp  getLaneType.cpp  getPosInfoClassTest.cpp  isBusLane.cpp  isFrontcartest.cpp  isOnRoadtest.cpp  roadIDTest.cpp  roadIDTest2.cpp  simpleTest.cpp  test.cpp
JinxC/roadInfos/include/: posInfo 20220224.hpp  posInfo.hpp  posInfo0126.hpp  posInfozw.hpp  tinyxml2.h
JinxC/roadInfos/src/: InterestedVehicles.cc  IsTurning.cpp  RouteList.cc  main.cpp  posInfo 20220121.cpp  posInfo 20220224.cpp  posInfo copy.cpp  posInfo.cpp  posInfo20220126.cpp  posInfowh.cpp  posInfoxyz.cpp  posInfozw.cpp  test_xyz_juction.cpp  使用方法.txt
JinxC/roadInfos/src/地图解析算法/: posInfo.cpp  posInfo.hpp
OdrManager_vtd/: CMakeLists.txt  OpenDRIVE.pro
OdrManager_vtd/OpenCRG/baselib/inc/: crgBaseLib.h
OdrManager_vtd/Public/inc/: OdrManager.hh  OdrManagerLite.hh
OdrManager_vtd/Public/inc/BaseNodes/: OdrRoadHeader.hh
OdrManager_vtd/inc/: OdrPath.hh  OdrReader.hh  OdrRoadQuery.hh  WKTNode.hh  WKTParser.hh
OdrManager_vtd/inc/Nodes/: OdrAllNodes.hh  OdrGeoArc.hh  OdrGeoLine.hh  OdrGeoParamPoly.hh  OdrGeoPoly.hh  OdrGeoSpiral.hh  OdrGeoSpiralBase.hh  OdrGeoSpiralOdr.hh
OdrManager_vtd/src/: OdrBbox.cc  OdrCoord.cc  OdrGeoCoord.cc  OdrHierCoord.cc  OdrLaneCoord.cc  OdrManager.cc  OdrManagerLite.cc  OdrParserCallback.cc  OdrPath.cc  OdrPosition.cc  OdrProjection.cc  OdrReader.cc  OdrReaderXML.cc  OdrRoadData.cc  OdrRoadQuery.cc  OdrTrackCoord.cc  WKTNode.cc  WKTParser.cc
OdrManager_vtd/src/BaseNodes/: OdrBorder.cc  OdrBridge.cc  OdrControlEntry.cc  OdrController.cc  OdrCornerInertial.cc  OdrCornerLocal.cc  OdrCornerReference.cc  OdrCornerRelative.cc  OdrCornerRoad.cc  OdrCrossfall.cc  OdrDataQuality.cc  OdrElevation.cc  OdrErrorDesc.cc  OdrGenericNode.cc  OdrGeoHeader.cc  OdrGeoNode.cc  OdrGeoReference.cc  OdrHeader.cc  OdrJuncController.cc  OdrJuncGroup.cc  OdrJuncHeader.cc  OdrJuncLaneLink.cc  OdrJuncLink.cc  OdrJuncPriority.cc  OdrJuncRef.cc  OdrLane.cc  OdrLaneAccess.cc  OdrLaneBorder.cc  OdrLaneHeight.cc  OdrLaneLink.cc  OdrLaneMaterial.cc  OdrLaneOffset.cc  OdrLaneRule.cc  OdrLaneSection.cc  OdrLaneSpeed.cc  OdrLaneValidity.cc  OdrLaneVisibility.cc  OdrLaneWidth.cc  OdrLateralShape.cc  OdrMarking.cc  (+32 more)
OdrManager_vtd/src/Nodes/: OdrGeoArc.cc  OdrGeoLine.cc  OdrGeoParamPoly.cc  OdrGeoPoly.cc  OdrGeoSpiral.cc  OdrGeoSpiralBase.cc  OdrGeoSpiralOdr.cc
OdrManager_vtd/src/TinyXml/: tinystr.cpp  tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp
OdrManager_vtd/test/: CMakeLists.txt  hello.cpp
